--- a/public/assets/extra-libs/datatables.net-bs4/css/dataTables.bootstrap4.css
+++ b/public/assets/extra-libs/datatables.net-bs4/css/dataTables.bootstrap4.css
@@ -24,6 +24,7 @@ div.dataTables_wrapper div.dataTables_length label {
   font-weight: normal;
   text-align: left;
   white-space: nowrap;
+  display: none;
 }
 div.dataTables_wrapper div.dataTables_length select {
   width: auto;
